fix iPhone date input alignment and clean date rendering

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -319,14 +319,18 @@ input[type='date'].date-input {
   color: #0f172a;
   background-color: #fff;
   color-scheme: light;
-  padding-right: 2.25rem;
+  padding-right: 2.75rem;
   overflow: hidden;
   text-overflow: ellipsis;
   -webkit-text-fill-color: currentColor;
+  appearance: none;
+  -webkit-appearance: none;
+  caret-color: transparent;
 }
 
 input[type='date'].date-input:invalid {
-  color: #94a3b8;
+  color: transparent;
+  -webkit-text-fill-color: transparent;
 }
 
 input[type='date'].date-input::-webkit-datetime-edit {
@@ -335,18 +339,25 @@ input[type='date'].date-input::-webkit-datetime-edit {
   min-width: 0;
   min-height: 1.2em;
   text-align: left;
+  color: transparent;
 }
 
 input[type='date'].date-input::-webkit-datetime-edit-fields-wrapper {
   min-width: 0;
+  color: transparent;
 }
 
 input[type='date'].date-input::-webkit-date-and-time-value {
   text-align: left;
+  color: transparent;
 }
 
 input[type='date'].date-input::-webkit-calendar-picker-indicator {
   margin-left: auto;
-  opacity: 0.9;
+  opacity: 0;
   cursor: pointer;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  inset: 0;
 }
